# impact-forecasting-warning

./: .bashrc  .gitignore  AUTHORS  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.rst  buildpack.sh  environment.yml  post-init.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI_publish.yaml  CI_publish_dev_documentation.yaml  CI_test.yaml  renku-image-build.yaml
doc/: conf.py  index.rst
doc/_static/: switcher_config.json
doc/_templates/: version.html
impact_forecasting_warning/exposure/: __init__.py  exposure_creation.py  exposure_data.py
impact_forecasting_warning/exposure/static_data/shapefiles/warning_regions/: MeteoSchweiz_Warnreg_2_3.dbf  MeteoSchweiz_Warnreg_2_3.sbn  MeteoSchweiz_Warnreg_2_3.sbx  MeteoSchweiz_Warnreg_2_3.shp  MeteoSchweiz_Warnreg_2_3.shp.xml  MeteoSchweiz_Warnreg_2_3.shx
impact_forecasting_warning/hazard/: __init__.py  hazard_forecast.py  weather_api.py
impact_forecasting_warning/pipelines/: __init__.py  wind_impact_forecast.py
impact_forecasting_warning/visualization/: __init__.py  plots.py  util_functions.py
impact_forecasting_warning/vulnerability/: __init__.py  wind.py
test/: __init__.py  conftest.py  test_dummy_library.py
test/integration/: __init__.py  test_pipelines.py  test_visualization.py
test/unit/: __init__.py  test_exposure.py  test_hazard.py  test_vulnerability.py
